# smart-git-agent

./: .gitignore  LICENSE  README.md  git-agent-config.ini  localtest  pyproject.toml  requirements.txt
smart_git_agent/: __init__.py  cli.py  commit_analyze.py  config_manager.py  file_utils.py  smart_git_agent.py
